--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,5 @@
 body {
     font-family: "Inter", sans-serif;
     margin: 0;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 }
